--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fedfred"
-version = "1.0.3"
-requires-python = ">=3.9"
+version = "1.0.4"
+requires-python = ">=3.9, <4.0"
 dependencies = [
     "httpx",
     "typed-diskcache",
@@ -61,10 +61,13 @@ exclude_dirs = ["tests"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
 pytest-cov = "^3.0.0"
 pylint = "^2.15.0"
 mypy = "^1.0.0"
 bandit = "^1.7.0"
 pip-audit = "^2.4.0"
+
+[tool.poetry]
+python = ">=3.9, <4.0"
