--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,25 +3,38 @@ name: Build and Deploy Docs
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -e .
-          pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints myst-parser
+          poetry install --with dev
+          poetry add sphinx sphinx-rtd-theme sphinx-autodoc-typehints myst-parser furo
+
       - name: Build docs
         run: |
           cd docs
-          make html
+          poetry run make html
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
