--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,3 +51,9 @@ repos:
             "--namespace-packages",
             "--explicit-package-bases",
           ]
+      - id: tox
+        name: Run tox
+        entry: tox
+        language: system
+        pass_filenames: false
+        always_run: true
