--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fedfred"
-version = "1.2.1"
+version = "1.2.2"
 description = "A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database: FRED"
 authors = [
     "Nikhil Sunder <nsunder724@gmail.com>"
@@ -36,22 +36,24 @@ polars = "*"
 geopandas = "*"
 types-geopandas = "*"
 
-
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0,<=8.3.5"
-pytest-cov = ">=3.0.0,<=3.0.1"
-pylint = ">=2.15.0,<=3.3.9"
+pytest-cov = ">=3.0.0,<=6.0.0"
+pylint = ">=2.15.0,<=3.3.5"
 mypy = ">=1.0.0,<=1.15.0"
 bandit = ">=1.7.0, <=1.8.3"
 pip-audit = ">=2.4.0,<=2.8.0"
 pre-commit = "^4.1.0"
 hypothesis = "^6.129.0"
 sphinx = ">=6.2.0,<=8.2.3"
-furo = ">=2021.11.23,<=2024.09.06"
+furo = ">=2021.11.23,<=2024.08.06"
 sphinx-autodoc-typehints = ">=1.12.0,<=3.1.0"
 myst-parser = ">=0.15,<4.0.1"
 linkify-it-py = "^2.0.3"
 sphinxcontrib-googleanalytics = "^0.4"
+tox = ">=3.24.0,<=4.24.2"
+pytest-asyncio = "^0.15.1"
+pytest-mock = "^3.6.1"
 
 [tool.mypy]
 files = "fedfred"
