--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
   publish-to-pypi:
     name: >-
       Publish Python distribution to PyPI
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish_to_pypi == 'true')
     needs:
       - build
     runs-on: ubuntu-latest
@@ -60,7 +60,6 @@ jobs:
       id-token: write
 
     steps:
-      # Checkout the code to get the pyproject.toml file
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
@@ -92,6 +91,7 @@ jobs:
     name: >-
       Sign the Python distribution with Sigstore
       and upload them to GitHub Release
+    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish_to_pypi == 'true')
     needs:
       - publish-to-pypi
     runs-on: ubuntu-latest
@@ -119,7 +119,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         run: >-
           gh release create
-          "$GITHUB_REF_NAME"
+          "${{ github.event.inputs.release_version || github.ref_name }}"
           --repo "$GITHUB_REPOSITORY"
           --notes ""
 
@@ -128,5 +128,5 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         run: >-
           gh release upload
-          "$GITHUB_REF_NAME" dist/**
+          "${{ github.event.inputs.release_version || github.ref_name }}" dist/**
           --repo "$GITHUB_REPOSITORY"
