--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,7 @@ jobs:
             ./dist/*.tar.gz
             ./dist/*.whl
 
-      - name: Create GitHub Release
+      - name: Create and publish GitHub Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: >-
@@ -122,6 +122,7 @@ jobs:
           "${{ github.event.inputs.release_version || github.ref_name }}"
           --repo "$GITHUB_REPOSITORY"
           --notes ""
+          --publish
 
       - name: Upload artifact signatures to GitHub Release
         env:
