--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fedfred"
-version = "1.2.2"
+version = "1.2.3"
 description = "A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database: FRED"
 authors = [
     "Nikhil Sunder <nsunder724@gmail.com>"
@@ -61,7 +61,8 @@ ignore_missing_imports = true
 
 [tool.pylint]
 max-line-length = 120
-disable = ["C0114", "C0115", "C0116", "C0302", "C0301"]
+disable = ["C0114", "C0115", "C0116", "C0302", "C0301", "E0401", "R0902", "R0913", "R0917", "R0914", "R0912", "R0904", "R1705", "C0103", "R1710"]
+ignore-patterns = [".*\\.pyi$"]
 
 [tool.bandit]
 exclude_dirs = ["tests", "docs"]
