--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fedfred"
-version = "1.2.6"
+version = "1.2.7"
 description = "A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database: FRED"
 authors = [
     "Nikhil Sunder <nsunder724@gmail.com>"
@@ -28,7 +28,8 @@ keywords = ["fred", "federal reserve", "api", "economics", "finance"]
 [tool.poetry.dependencies]
 python = ">=3.9, <4.0"
 httpx = "*"
-cacheout = "*"
+cachetools = "*"
+types-cachetools = "*"
 tenacity = "*"
 pandas = "*"
 pandas-stubs = "*"
@@ -54,6 +55,7 @@ sphinxcontrib-googleanalytics = "^0.4"
 tox = ">=3.24.0,<=4.24.2"
 pytest-asyncio = "^0.15.1"
 pytest-mock = "^3.6.1"
+tomli = "^2.0.1"
 
 [tool.mypy]
 files = "fedfred"
@@ -61,7 +63,7 @@ ignore_missing_imports = true
 
 [tool.pylint]
 max-line-length = 120
-disable = ["C0114", "C0115", "C0116", "C0302", "C0301", "E0401", "R0902", "R0913", "R0917", "R0914", "R0912", "R0904", "R1705", "C0103", "R1710"]
+disable = ["C2801", "C0114", "C0115", "C0116", "C0302", "C0301", "E0401", "R0902", "R0913", "R0917", "R0914", "R0912", "R0904", "R1705", "C0103", "R1710"]
 ignore-patterns = [".*\\.pyi$"]
 
 [tool.bandit]
