--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fedfred"
-version = "1.2.7"
+version = "1.2.8"
 description = "A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database: FRED"
 authors = [
     "Nikhil Sunder <nsunder724@gmail.com>"
@@ -29,15 +29,15 @@ keywords = ["fred", "federal reserve", "api", "economics", "finance"]
 python = ">=3.9, <4.0"
 httpx = "*"
 cachetools = "*"
-types-cachetools = "*"
 tenacity = "*"
 pandas = "*"
-pandas-stubs = "*"
 polars = "*"
 geopandas = "*"
-types-geopandas = "*"
 
 [tool.poetry.group.dev.dependencies]
+pandas-stubs = "*"
+types-cachetools = "*"
+types-geopandas = "*"
 pytest = ">=7.0.0,<=8.3.5"
 pytest-cov = ">=3.0.0,<=6.0.0"
 pylint = ">=2.15.0,<=3.3.5"
@@ -56,6 +56,9 @@ tox = ">=3.24.0,<=4.24.2"
 pytest-asyncio = "^0.15.1"
 pytest-mock = "^3.6.1"
 tomli = "^2.0.1"
+
+[tool.poetry.extras]
+types = ["pandas-stubs", "types-cachetools", "types-geopandas"]
 
 [tool.mypy]
 files = "fedfred"
