--- a/tox.ini
+++ b/tox.ini
@@ -1,65 +1,35 @@
 [tox]
-envlist = py39, py310, py311
+envlist = py39, py310, py311, dev, check
 isolated_build = True
 
 [testenv]
-description = Test package installation and dependencies
+description = Test package installation and runtime dependencies
 deps =
-    httpx
-    cacheout
-    tenacity
-    pandas
-    pandas-stubs
-    polars
-    geopandas
-    types-geopandas
+    poetry
 commands =
-    python -c "import httpx, cacheout, tenacity, pandas, polars, geopandas; print('All dependencies installed successfully!')"
+    poetry install --no-root --no-interaction
+    python -c "import httpx, cachetools, tenacity, pandas, polars, geopandas; print('All runtime dependencies installed successfully!')"
 
 [testenv:dev]
 description = Test development dependencies
 deps =
-    pytest>=7.0.0,<=8.3.5
-    pytest-cov>=3.0.0,<=3.0.1
-    pylint>=2.15.0,<=3.3.9
-    mypy>=1.0.0,<=1.15.0
-    bandit>=1.7.0,<=1.8.3
-    pip-audit>=2.4.0,<=2.8.0
-    pre-commit>=4.1.0
-    hypothesis>=6.129.0
-    sphinx>=6.2.0,<=8.2.3
-    furo>=2021.11.23,<=2024.09.06
-    sphinx-autodoc-typehints>=1.12.0,<=3.1.0
-    myst-parser>=0.15,<4.0.1
-    linkify-it-py>=2.0.3
-    sphinxcontrib-googleanalytics>=0.4
+    poetry
 commands =
+    poetry install --no-root --with dev --no-interaction
     python -c "print('Development dependencies installed successfully!')"
 
-[testenv:check]
-description = Check all dependencies (runtime + dev)
+[testenv:types]
+description = Test optional type stubs
 deps =
-    httpx
-    cacheout
-    tenacity
-    pandas
-    pandas-stubs
-    polars
-    geopandas
-    types-geopandas
-    pytest>=7.0.0,<=8.3.5
-    pytest-cov>=3.0.0,<=3.0.1
-    pylint>=2.15.0,<=3.3.9
-    mypy>=1.0.0,<=1.15.0
-    bandit>=1.7.0,<=1.8.3
-    pip-audit>=2.4.0,<=2.8.0
-    pre-commit>=4.1.0
-    hypothesis>=6.129.0
-    sphinx>=6.2.0,<=8.2.3
-    furo>=2021.11.23,<=2024.09.06
-    sphinx-autodoc-typehints>=1.12.0,<=3.1.0
-    myst-parser>=0.15,<4.0.1
-    linkify-it-py>=2.0.3
-    sphinxcontrib-googleanalytics>=0.4
+    poetry
 commands =
-    python -c "print('All dependencies installed successfully!')"
+    poetry install --no-root --extras "types" --no-interaction
+    python -c "import pandas, geopandas; print('Type stubs installed successfully!')"
+
+[testenv:check]
+description = Check all dependencies (runtime + dev + optional)
+deps =
+    poetry
+commands =
+    poetry install --no-root --with dev --extras "types" --no-interaction
+    python -c "print('All dependencies (runtime, dev, and optional) installed successfully!')"
