--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,6 +171,81 @@ jobs:
           # Sign the package with Anaconda
           anaconda upload --user nikhil.sunder --force $CONDA_PACKAGE
 
+  update-feedstock:
+    name: Update Conda-Forge Feedstock
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v3
+
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+
+      - name: Download conda recipe
+        uses: actions/download-artifact@v4
+        with:
+          name: conda-recipe
+          path: conda-recipe/
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          pip install ruamel.yaml gitpython
+
+      - name: Clone the feedstock repository
+        env:
+          FEEDSTOCK_REPO: "https://github.com/nikhilxsunder/fedfred-feedstock.git"
+        run: |
+          git clone $FEEDSTOCK_REPO feedstock
+
+      - name: Update feedstock meta.yaml with correct sha256
+        shell: bash -el {0}
+        run: |
+          # Extract version and tarball path
+          VERSION=$(ls dist/fedfred-*.tar.gz | grep -oP 'fedfred-\K[0-9]+\.[0-9]+\.[0-9]+' | head -n 1)
+          TARBALL_PATH=$(realpath dist/fedfred-${VERSION}.tar.gz)
+
+          # Calculate SHA256 of the tarball
+          SHA256=$(sha256sum $TARBALL_PATH | cut -d ' ' -f 1)
+
+          # Update meta.yaml with the correct info
+          sed -i "s/version:.*/version: $VERSION/" conda-recipe/meta.yaml
+          sed -i "s|url:.*|url: \"https://pypi.io/packages/source/f/fedfred/fedfred-${VERSION}.tar.gz\"|" conda-recipe/meta.yaml
+          sed -i "s/sha256:.*/sha256: \"$SHA256\"/" conda-recipe/meta.yaml
+
+          # Copy updated meta.yaml to the feedstock repository
+          cp conda-recipe/meta.yaml feedstock/recipe/meta.yaml
+
+      - name: Commit and push changes
+        run: |
+          cd feedstock
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git checkout -b update-${{ github.event.inputs.release_version || github.ref_name }}
+          git add recipe/meta.yaml
+          git commit -m "Update to version ${{ github.event.inputs.release_version || github.ref_name }}"
+          git push origin update-${{ github.event.inputs.release_version || github.ref_name }}
+
+      - name: Create a Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.FEEDSTOCK_TOKEN }}
+          commit-message: "Update to version ${{ github.event.inputs.release_version || github.ref_name }}"
+          branch: update-${{ github.event.inputs.release_version || github.ref_name }}
+          title: "Update to version ${{ github.event.inputs.release_version || github.ref_name }}"
+          body: |
+            This PR updates the `fedfred-feedstock` to version ${{ github.event.inputs.release_version || github.ref_name }}.
+            The `meta.yaml` file has been updated with the correct version and sha256 hash.
+
   sign-and-release:
     name: >-
       Sign and publish GitHub Release
