--- a/conda-forge/meta.yaml
+++ b/conda-forge/meta.yaml
@@ -1,50 +1,52 @@
+{% set name = "fedfred" %}
+{% set version = "2.0.0" %}
+
 package:
-  name: fedfred
-  version: 2.0.0
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  url: "https://pypi.io/packages/source/f/fedfred/fedfred-2.0.0.tar.gz"
-  sha256: "df2156a15971186d01ade494919eaa4e898a55a865ecd34bdac3e6adedc24578"
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 51a4d7b14a670aa3ad3db16bf27807147aa36b198dde51ee1c4e1dc4166aba84
 
 build:
   noarch: python
   number: 0
-  script: |
-    python -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolatio
 
 requirements:
   host:
-    - python >=3.9,<4.0
+    - python {{ python_min }}
     - pip
     - poetry-core >=1.0.0
   run:
-    - python >=3.9,<4.0
+    - python >={{ python_min }}
     - httpx
     - tenacity
     - pandas
     - geopandas
-    - conda-forge::polars
-    - conda-forge::cachetools
-    - conda-forge::asyncache
-    - conda-forge::dask
-    - conda-forge::dask-geopandas
+    - polars
+    - cachetools
+    - dask
+    - asyncache
 
 test:
   imports:
     - fedfred
   requires:
     - pip
+    - python {{ python_min }}
   commands:
     - pip check
 
 about:
-  home: "https://github.com/nikhilxsunder/fedfred"
-  doc_url: "https://nikhilxsunder.github.io/fedfred/"
-  dev_url: "https://github.com/nikhilxsunder/fedfred"
+  home: https://github.com/nikhilxsunder/fedfred
+  doc_url: https://nikhilxsunder.github.io/fedfred/
+  dev_url: https://github.com/nikhilxsunder/fedfred
   license: AGPL-3.0-or-later
   license_family: AGPL
   license_file: LICENSE
-  summary: "A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database (FRED)"
+  summary: A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database (FRED)
   description: |
     FedFred is a Python package for interacting with the Federal Reserve Bank of St. Louis Economic Database (FRED API).
     It provides a feature-rich interface with:
