--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fedfred"
-version = "1.2.9"
+version = "2.0.0"
 description = "A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database: FRED"
 authors = [
     "Nikhil Sunder <nsunder724@gmail.com>"
@@ -14,7 +14,7 @@ license = "AGPL-3.0-or-later"
 repository = "https://github.com/nikhilxsunder/fedfred"
 documentation = "https://nikhilxsunder.github.io/fedfred/"
 packages = [{include = "fedfred", from = "src"}]
-include = ["src/fedfred/py.typed", "src/fedfred/**/*.pyi"]
+include = ["src/fedfred/py.typed"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU Affero General Public License v3",
@@ -23,51 +23,64 @@ classifiers = [
     "Intended Audience :: Financial and Insurance Industry",
     "Topic :: Office/Business :: Financial :: Investment"
 ]
-keywords = ["fred", "federal reserve", "api", "economics", "finance"]
+keywords = [
+    "fred", "federal reserve", "api", "economics", "finance", "economic data", "financial data",
+    "fred pandas", "fred polars", "fred dask", "fred geopandas", "async", "pandas", "polars",
+    "dask", "geopandas", "cache", "financial analysis", "economic analysis", "data analysis",
+    "data science", "data visualization", "data mining", "data wrangling", "data cleaning"
+]
 
 [tool.poetry.dependencies]
-python = ">=3.9, <4.0"
+python = ">=3.10, <4.0"
 httpx = "*"
 cachetools = "*"
+asyncache ="*"
 tenacity = "*"
 pandas = "*"
-polars = "*"
 geopandas = "*"
 
 [tool.poetry.group.dev.dependencies]
 pandas-stubs = "*"
 types-cachetools = "*"
 types-geopandas = "*"
-pytest = ">=7.0.0,<=8.3.5"
-pytest-cov = ">=3.0.0,<=6.0.0"
-pylint = ">=2.15.0,<=3.3.5"
-mypy = ">=1.0.0,<=1.15.0"
-bandit = ">=1.7.0, <=1.8.3"
-pip-audit = ">=2.4.0,<=2.8.0"
-pre-commit = "^4.1.0"
-hypothesis = "^6.129.0"
-sphinx = ">=6.2.0,<=8.2.3"
-furo = ">=2021.11.23,<=2024.08.06"
-sphinx-autodoc-typehints = ">=1.12.0,<=3.1.0"
-myst-parser = ">=0.15,<4.0.1"
-linkify-it-py = "^2.0.3"
-sphinxcontrib-googleanalytics = "^0.4"
-tox = ">=3.24.0,<=4.24.2"
-pytest-asyncio = "^0.15.1"
-pytest-mock = "^3.6.1"
-tomli = "^2.0.1"
-sphinx-sitemap = "^2.6.0"
+polars = "*"
+polars-st = "*"
+dask = "*"
+dask-geopandas = "*"
+pytest = "*"
+pytest-cov = "*"
+pylint = "*"
+mypy = "*"
+bandit = "*"
+pip-audit = "*"
+pre-commit = "*"
+hypothesis = "*"
+sphinx = "*"
+furo = "*"
+sphinx-autodoc-typehints = "*"
+myst-parser = "*"
+linkify-it-py = "* "
+sphinxcontrib-googleanalytics = "*"
+tox = "*"
+pytest-asyncio = "*"
+pytest-mock = "*"
+tomli = "*"
+sphinx-sitemap = "*"
+sphinxext-opengraph = "*"
+toml = "*"
 
 [tool.poetry.extras]
 types = ["pandas-stubs", "types-cachetools", "types-geopandas"]
+dask = ["dask", "dask-geopandas"]
+polars = ["polars", "polars-st"]
 
 [tool.mypy]
 files = "fedfred"
 ignore_missing_imports = true
 
 [tool.pylint]
-max-line-length = 120
-disable = ["C2801", "C0114", "C0115", "C0116", "C0302", "C0301", "E0401", "R0902", "R0913", "R0917", "R0914", "R0912", "R0904", "R1705", "C0103", "R1710"]
+max-line-length = 200
+disable = ["C0415", "C2801", "C0114", "C0115", "C0116", "C0302", "C0301", "E0401", "R0902", "R0913", "R0917", "R0914", "R0912", "R0904", "R1705", "C0103", "R1710"]
 ignore-patterns = [".*\\.pyi$"]
 
 [tool.bandit]
@@ -75,3 +88,4 @@ exclude_dirs = ["tests", "docs"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+pythonpath = "src"
