--- a/conda-forge/meta.yaml
+++ b/conda-forge/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "fedfred" %}
-{% set version = "2.1.3" %}
+{% set version = "2.1.4" %}
 
 package:
   name: {{ name|lower }}
@@ -43,8 +43,8 @@ about:
   home: https://github.com/nikhilxsunder/fedfred
   doc_url: https://nikhilxsunder.github.io/fedfred/
   dev_url: https://github.com/nikhilxsunder/fedfred
-  license: AGPL-3.0-or-later
-  license_family: AGPL
+  license: MIT
+  license_family: MIT
   license_file: LICENSE
   summary: A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database (FRED)
   description: |
