--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,20 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "fedfred"
-version = "2.1.3"
+version = "2.1.4"
 description = "A feature-rich python package for interacting with the Federal Reserve Bank of St. Louis Economic Database: FRED"
 authors = [
     "Nikhil Sunder <nsunder724@gmail.com>"
 ]
 readme = "README.md"
-license = "AGPL-3.0-or-later"
+license = "MIT"
 repository = "https://github.com/nikhilxsunder/fedfred"
 documentation = "https://nikhilxsunder.github.io/fedfred/"
 packages = [{include = "fedfred", from = "src"}]
 include = ["src/fedfred/py.typed"]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU Affero General Public License v3",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Financial and Insurance Industry",
