--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
           )$
         args:
           [
-            "--disable=E0401,R0902,R0913,R0917,R0914,R0912,R0904,R1705,C0103,R1710,C2801,C0415,R1720,R1711,R0915",
+            "--disable=E0401,R0902,R0913,R0917,R0914,R0912,R0904,R1705,C0103,R1710,C2801,C0415,R1720,R1711,R0915,W0603,R0911",
           ]
 
   - repo: local
